fixed jumping tetris bug

--- a/application.css
+++ b/application.css
@@ -106,6 +106,7 @@ canvas{
   /*height: 100%;*/
 }
 
+
 #game-canvas{
   display: block;
   position: absolute;
@@ -124,4 +125,25 @@ canvas{
 .portfolio-links{
   margin-right: 5px;
   margin-top: 2px;
+}
+
+.lost-game{
+  font-family: 'Press Start 2P', cursive;
+  font-size: 10px;
+  color: whitesmoke;
+  position: relative;
+  top: 200px;
+  left: 3px;
+  z-index: 1;
+  text-align: center;
+}
+
+.visible{
+  visibility: visible;
+  height: 0px;
+}
+
+.hidden{
+  height: 0px;
+  visibility: hidden;
 }
